[package]
name = "archiver"
version = "0.1.0"
authors = ["Richo Healey <richo@psych0tik.net>"]
edition = "2018"
description = "Tool for uploading action cam and datalogger footage."

[features]
default = [ "usb" ]
"web" = [
  "rocket",
  "rocket_contrib",
  "diesel",
  "diesel-derive-enum",
  "diesel_migrations",
  "bcrypt",
  "rand",
  "oauth2",
  "serde_urlencoded"
]
"usb" = [
  "libusb",
  "ptp"
]

[dependencies]
rocket = { version = "0.4.0", optional = true, features = ["tls"] }
rocket_contrib = { version = "0.4.0", optional = true, default_features = false, features = ["handlebars_templates", "json", "serve"] }
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "serde_json", "chrono"], optional = true }
diesel-derive-enum = { version = "0.4.4", optional = true, features = ["postgres"] }
diesel_migrations = { version = "1.4.0", optional = true }
bcrypt = { version = "0.3.0", optional = true }
rand = { version = "0.6.5", optional = true }
oauth2 = { version = "2.0.0-alpha.4", optional = true }
serde_urlencoded = { version = "0.5.4", optional = true }
libusb = { version = "0.3.0", optional = true }
ptp = { git = "https://github.com/richo/rust-ptp", optional = true }

toml = "0.5.0"
clap = "2.32.0"
dotenv = "0.13.0"
serde = { version = "1.0.89", features = ["derive"] }
serde_derive = "1.0.89"
serde_json = "1.0.39"
failure = "0.1.5"
lazy_static = "1.3.0"
chrono = { version = "0.4.6", features = ["serde"] }
regex = "1.1.2"
reqwest = "0.9.12"
log = "0.4.6"
pretty_env_logger = "0.3.0"
hashing-copy = "0.3.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
hex = "0.3.2"
digest = "0.8.0"
sha2 = "0.8.0"
handlebars = "1.1.0"
sendgrid = "0.8.1"
url = "1.7.2"
tus = "0.3.0"
failure_derive = "0.1.5"
filetime = "0.2.4"
rpassword = "3.0.0"
dirs = "1.0.5"
time = "0.1.42"
dropbox-content-hasher = "0.3.0"
lockfile = "0.2.1"
redacted_debug = "0.1.0"
pshovr = "0.1.0"

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["web"]

[[bin]]
name = "run_migrations"
path = "src/bin/run_migrations.rs"
required-features = ["web"]

[package.metadata.bundle]
name = "archiver"
identifier = "net.psych0tik.richo.archiver"
