[package]
name = "stokepile"
version = "0.2.0"
authors = ["Richo Healey <richo@psych0tik.net>"]
edition = "2018"
description = "Tool for uploading action cam and datalogger footage."
default-run = "server"

[package.metadata.bundle]
name = "stokepile"
identifier = "net.psych0tik.richo.stokepile"

[features]
default = [ "usb" ]
"web" = [
  "rocket",
  "rocket_dyn_templates",
  "rocket_sync_db_pools",
  "diesel",
  "diesel-derive-enum",
  "diesel_migrations",
  "bcrypt",
  "oauth2",
  "serde_urlencoded",
  "headers",
  "async-trait",
  "rocket_seek_stream"

]
"usb" = [
  "libusb",
  "ptp"
]


[dependencies]
rocket = { version = "0.5.0", optional = true, features = ["tls", "json", "secrets"] }
rocket_dyn_templates = { version = "0.1.0", optional = true, features = ["handlebars"] }
rocket_sync_db_pools = { version = "0.1.0", optional = true, features = ["diesel_postgres_pool"] }
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "serde_json", "chrono"], optional = true }
diesel-derive-enum = { version = "0.4.4", optional = true, features = ["postgres"] }
diesel_migrations = { version = "1.4.0", optional = true }
bcrypt = { version = "0.12.0", optional = true }
oauth2 = { version = "2.0.0", optional = true }
serde_urlencoded = { version = "0.6.1", optional = true }
libusb = { version = "0.3.0", optional = true }
ptp = { git = "https://github.com/richo/rust-ptp", optional = true }

headers = { version = "0.4.0", optional = true }
async-trait = { version = "0.1.74", optional = true }
rocket_seek_stream = { version = "0.2.6", optional = true }

stokepile-shared = { path = "shared" }

toml = "0.5.5"
clap = "2.33.0"
dotenv = "0.15.0"
serde = { version = "1.0.102", features = ["derive"] }
serde_derive = "1.0.102"
serde_json = "1.0.41"
failure = "0.1.6"
lazy_static = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
regex = "1.3.1"
reqwest = { version = "0.11.9", features = ["json"] }
log = "0.4.8"
pretty_env_logger = "0.3.1"
hashing-copy = "0.3.0"
tempfile = "3.1.0"
walkdir = "2.2.9"
hex = "0.4.2"
digest = "0.8.1"
sha2 = "0.8.0"
handlebars = "4.5.0"
sendgrid = "0.9.0"
url = "2.5.0"
rand = "0.7.2"
tus = "2.0.0-rc.0"
failure_derive = "0.1.6"
filetime = "0.2.7"
rpassword = "4.0.1"
dirs = "2.0.2"
time = "0.2.23"
dropbox-content-hasher = "0.3.0"
lockfile = "0.2.1"
redacted_debug = "0.1.0"
pshovr = "0.2.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
tokio = { version = "1.34.0", features = ["full"] }

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["web"]

[[bin]]
name = "media-server"
path = "src/bin/media-server.rs"
required-features = ["web"]

[[bin]]
name = "run_migrations"
path = "src/bin/run_migrations.rs"
required-features = ["web"]
